--- a/nowness/styles.css
+++ b/nowness/styles.css
@@ -12,6 +12,7 @@ body {
   color: black;
   margin: 0px 0px 10px 0;
   background-color: #ffffff;
+  width: 100vw;
 }
 
 ul {
@@ -24,59 +25,57 @@ ul {
   width: 100vw;
 }
 
-#hamburger-input.hidden {
-  position: absolute;
-  left: -100vw;
-}
-
 .overlay-menu {
   position: absolute;
   top: 50;
   left: 0;
   width: 100vw;
+  height: 100vh;
   background-color: #f8f8f8;
-  transform: translateY(100%);
-  background-color: red;
-  z-index: 1000;
+  overflow: hidden;
+  transform: translateY(-120%);
+  transition: transform 0.5s ease-in;
 }
 
 #hamburger-input:checked ~ .overlay-menu {
-  transform: translateY(4.9%);
+  transform: translateY(5.5%);
 }
 
-.overlay-menu nav ul li {
+.overlay-menu ul li {
   font-weight: 700;
   font-size: 1.4rem;
   padding: 10px 15px;
 }
 
-.border {
-  border-top: 1px solid #dcdcdc;
-}
-
-.overlay-menu nav ul li:hover:not(.no-hover) {
+.overlay-menu ul li:hover {
   background-color: white;
   color: black;
   border-left: 2px solid #c9a16e;
 }
 
-.overlay-menu .icons-container {
-  margin: 0px;
+.overlay-menu .icons-container,
+.connect .icons-container {
+  margin: 5px 30px;
   display: grid;
   grid-template-columns: repeat(4, auto);
   justify-content: space-between;
 }
 
 .overlay-menu .icons-container svg {
-  padding: 5px 25px;
-  width: 20px;
+  padding: 10px 25px;
+  width: 18px;
+}
+
+.connect .icons-container svg {
+  padding: 30px;
+  margin: 0px 0 20px 0;
 }
 
 nav ul ul {
   display: none;
 }
 
-div.row1-header {
+.row1-header {
   display: flex;
   justify-content: space-between;
   height: 20px;
@@ -84,18 +83,23 @@ div.row1-header {
   position: relative;
   flex-wrap: nowrap;
 }
-div.row1-header .header-logo {
+.row1-header .row1-header-left {
+  display: flex;
+  position: relative;
+}
+.row1-header .header-logo {
   height: 18px;
   position: absolute;
-  top: 9px;
-  left: 35px;
+  top: 8px;
+  left: -45px;
 }
-div.row1-header div svg {
+.row1-header div svg {
   padding: 2px 5px 2px 5px;
 }
 
-nav ul li:hover {
-  color: #c9a16e;
+.row1-header-right svg:hover,
+.icons-container svg:hover {
+  fill: #c9a16e;
 }
 
 .scroll-menu {
@@ -104,20 +108,17 @@ nav ul li:hover {
   white-space: nowrap;
 }
 
-.scroll-menu nav ul {
+.scroll-menu ul {
   display: flex;
   flex-direction: row;
 }
-.scroll-menu nav ul li {
+.scroll-menu ul li {
   display: inline-block;
   padding: 12px 20px;
 }
 
-a {
-  text-decoration: none;
-  font-weight: 200;
-  font-size: 1.3rem;
-  color: black;
+nav ul li:hover {
+  color: #c9a16e;
 }
 
 h1 {
@@ -126,7 +127,6 @@ h1 {
   padding: 20px;
 }
 
-.label,
 p {
   font-weight: 200;
   font-size: 1.4rem;
@@ -144,10 +144,15 @@ h3 {
   padding: 15px 0;
 }
 
+.label {
+  font-size: 1.4rem;
+  font-weight: 200;
+}
+
 .small {
   font-size: 1.2rem;
 }
-.small .sign-in {
+.small .sign-in a {
   color: #c9a16e;
 }
 
@@ -156,7 +161,8 @@ div ul li {
   font-size: 1.2rem;
 }
 
-.button {
+.button,
+.button1 {
   background-color: #ffffff;
   font-weight: 200;
   font-family: nunito;
@@ -167,13 +173,13 @@ div ul li {
   box-sizing: border-box;
   height: 41px;
 }
-
-.button:hover {
+.button:hover,
+.button1:hover {
   color: #c9a16e;
   box-shadow: 0px -1px #c9a16e inset;
 }
 
-div .icons-container {
+.icons-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -181,14 +187,6 @@ div .icons-container {
   margin-top: 20px;
   margin-bottom: 20px;
   flex-direction: row;
-}
-
-a :hover {
-  fill: #c9a16e;
-}
-
-a svg:hover {
-  border-bottom: 1px solid black;
 }
 
 div.switches {
@@ -215,6 +213,7 @@ div.switches span.label {
   overflow: auto;
   border-bottom: 1px solid #c9a16e;
   padding: 30px 0;
+  width: 100vw;
 }
 
 .recent-uploads-card {
@@ -222,7 +221,7 @@ div.switches span.label {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  width: 300px;
+  width: 200px;
   padding-right: 20px;
 }
 
@@ -230,27 +229,50 @@ div.switches span.label {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-bottom: 1px solid #c9a16e;
+  width: 100vw;
+}
+
+.no-direct-flight-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
 }
 
 .no-direct-flight-content-card {
-  width: 370px;
-  padding-bottom: 20px;
-  flex-wrap: wrap;
   display: flex;
-  direction: column;
+  flex-direction: column;
+  width: 90vw;
+  justify-content: flex-start;
+  margin-bottom: 25px;
+}
+.no-direct-flight-content-card img {
+  width: 90vw;
 }
 
 .around-the-world {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-bottom: 1px solid #c9a16e;
+  width: 100vw;
+}
+
+.around-the-world-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
 }
 
 .around-the-world-content-card {
-  width: 370px;
-  padding-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  width: 90vw;
+  justify-content: flex-start;
+  margin-bottom: 25px;
+}
+.around-the-world-content-card img {
+  width: 90vw;
 }
 
 .subscribe-to-newsletter {
@@ -261,6 +283,7 @@ div.switches span.label {
 }
 .subscribe-to-newsletter .subscribe-title {
   text-align: center;
+  width: 100vw;
 }
 .subscribe-to-newsletter p {
   padding: 5px 0 5px;
@@ -276,29 +299,49 @@ div.switches span.label {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 350px;
+  box-sizing: border-box;
+  width: 100vw;
+  padding: 20px;
 }
 
-.most-watched,
-.most-watched-content,
+.most-watched {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+}
+
 .most-watched-sub {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 5px;
+  width: 100vw;
 }
 
 .most-watched-content {
-  text-align: center;
   width: 400px;
+}
+
+.most-watched-content-card {
+  display: flex;
+  flex-direction: column;
+  width: 90vw;
+  justify-content: flex-start;
+  margin-bottom: 25px;
+  text-align: center;
+  justify-content: center;
+  width: auto;
+}
+.most-watched-content-card img {
+  width: auto;
+}
+
+.most-watched-all {
+  border-bottom: 1px solid #c9a16e;
 }
 
 .h3-most-watched {
   padding: 10px;
-}
-
-.most-watched {
-  border-bottom: 1px solid #c9a16e;
 }
 
 .share-the-love {
@@ -313,12 +356,16 @@ div.switches span.label {
   flex-direction: column;
 }
 
+.social-detail {
+  display: none;
+}
+
 .become-a-member {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  padding: 20px;
+  padding: 20px 20px 60px 20px;
 }
 
 .connect {
@@ -328,8 +375,32 @@ div.switches span.label {
 .connect .h2-connect {
   font-size: 1.3rem;
 }
-.connect .icons-container a {
-  padding: 40px;
+
+.more-to-love {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+  border-style: none;
+}
+
+.more-to-love-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+}
+
+.more-to-love-content-card {
+  display: flex;
+  flex-direction: column;
+  width: 90vw;
+  justify-content: flex-start;
+  margin-bottom: 25px;
+  width: 200px;
+}
+.more-to-love-content-card img {
+  width: 200px;
 }
 
 h3.light {
@@ -337,33 +408,18 @@ h3.light {
   padding: 10px 0px 5px;
 }
 
-.more-to-love,
-.more-to-love-content,
-.more-to-love-card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.more-to-love-content {
-  width: 200px;
-}
-.more-to-love-content p {
-  padding-bottom: 50px;
-}
-
 footer .social-banner .icons-container {
   border-bottom: 1px solid #c9a16e;
   border-top: 1px solid #c9a16e;
 }
-footer .social-banner .icons-container a {
-  padding: 40px;
+footer .social-banner .icons-container svg {
+  padding: 30px;
 }
 
 footer p,
 li {
   font-size: 1.2rem;
-  padding: 20px;
+  padding: 10px;
 }
 
 .links-end ul {
@@ -381,6 +437,10 @@ div.copyright {
 div.copyright p {
   justify-items: center;
   text-align: center;
+}
+
+.slider {
+  z-index: -1;
 }
 
 .switch {
@@ -439,4 +499,308 @@ div.copyright p {
 
 .switch input[type=checkbox]:checked:active + .slider::after {
   transform: translateX(calc(var(--button-width) - var(--toggle-wider) - var(--button-toggle-offset)));
+}
+
+.Menu-container {
+  height: 25px;
+  width: 30px;
+  cursor: pointer;
+  margin: 10% auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  top: -8px;
+  left: 0px;
+}
+
+.line {
+  position: absolute;
+  height: 2px;
+  width: 25px;
+  background-color: black;
+  transition: 0.4s ease;
+}
+
+#hamburger-input {
+  display: none;
+}
+
+.line::before {
+  content: "";
+  position: absolute;
+  height: 2px;
+  width: 25px;
+  background-color: black;
+  top: -8px;
+  transition: 0.4s ease;
+}
+
+.line::after {
+  content: "";
+  position: absolute;
+  height: 2px;
+  width: 25px;
+  background-color: black;
+  top: 8px;
+}
+
+#hamburger-input:checked + label #active {
+  transform: rotate(45deg);
+  background-color: #c9a16e;
+}
+
+#hamburger-input:checked + label #active::before {
+  transform: rotate(-90deg) translateX(-8px);
+  background-color: #c9a16e;
+}
+
+#hamburger-input:checked + label #active::after {
+  display: none;
+}
+
+.black-time-box {
+  background-color: black;
+  width: 50px;
+  height: 25px;
+  color: white;
+  font-size: 1.2rem;
+  padding: 2px 0 1px 5px;
+  position: relative;
+}
+
+.time {
+  position: absolute;
+  margin: 0;
+}
+
+@media screen and (min-width: 750px) {
+  .overlay-menu {
+    width: 250px;
+    height: 100vh;
+  }
+  #hamburger-input:checked ~ .overlay-menu {
+    transform: translateY(4.5%);
+  }
+  .today {
+    padding-top: 80px;
+  }
+  .no-direct-flight {
+    width: 100vw;
+  }
+  .no-direct-flight-content {
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 20px;
+  }
+  .no-direct-flight-content-card {
+    padding: 0 10px;
+    width: 200px;
+    flex: auto;
+  }
+  .no-direct-flight-content-card img {
+    width: auto;
+  }
+  .more-to-love {
+    width: 100vw;
+  }
+  .more-to-love-content {
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 20px;
+  }
+  .more-to-love-content-card {
+    padding: 0 10px;
+    width: 200px;
+    flex: auto;
+  }
+  .more-to-love-content-card img {
+    width: auto;
+  }
+  .around-the-world {
+    width: 100vw;
+  }
+  .around-the-world-content {
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  .around-the-world-content-left,
+.around-the-world-content-right {
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  .around-the-world-content-card {
+    flex: auto;
+    width: 400px;
+  }
+  .around-the-world-content-card img {
+    width: auto;
+  }
+  .share-the-love {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .share-the-love-content {
+    display: flex;
+    flex-direction: row;
+  }
+  .share-the-love-content img {
+    width: 250px;
+  }
+  .share-the-love-content-card {
+    display: flex;
+    flex-direction: row;
+    padding: 20px;
+  }
+  .share-the-love-content-card .button1 {
+    display: none;
+  }
+  .share-the-love-right {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .social-detail {
+    display: contents;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    width: 250px;
+    height: 250px;
+    justify-content: space-evenly;
+  }
+  .social-detail p {
+    font-size: 1.6rem;
+  }
+  h2 {
+    font-size: 2.6rem;
+  }
+  p {
+    font-size: 1.5rem;
+  }
+  .connect .icons-container {
+    justify-content: center;
+    align-content: center;
+  }
+  .connect .icons-container svg {
+    width: 30px;
+    margin: 15px;
+  }
+  .connect .h2-connect {
+    font-size: 1.7rem;
+  }
+  .scroll-menu ul {
+    justify-content: center;
+  }
+  .p-join {
+    width: 500px;
+    font-size: 1.7rem;
+  }
+}
+@media screen and (min-width: 1000px) {
+  div.copyright {
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100vw;
+    margin: 30px 20px;
+  }
+  nav.links-end ul {
+    flex-direction: row;
+    margin: 20px 20px;
+    justify-content: center;
+    width: 100vw;
+  }
+  div.row1-header {
+    justify-content: space-around;
+    height: 50px;
+    align-items: center;
+  }
+  .around-the-world-content {
+    flex-direction: row;
+    justify-content: center;
+  }
+  .around-the-world-content-left {
+    display: flex;
+    flex-direction: row;
+  }
+  .around-the-world-content-right {
+    display: flex;
+    flex-direction: row;
+  }
+  .around-the-world-content-card {
+    padding: 0 10px;
+    box-sizing: border-box;
+    width: 300px;
+  }
+  .community {
+    display: flex;
+    border-bottom: 1px solid #c9a16e;
+    justify-content: center;
+    align-content: center;
+    height: 400px;
+  }
+  .community-div {
+    padding: 50px;
+  }
+  .connect {
+    display: block;
+    border: none;
+    height: 250px;
+    justify-content: center;
+  }
+  .become-a-member {
+    display: block;
+    padding: 0;
+    height: 250px;
+    justify-content: center;
+    border-right: 1px solid black;
+    padding: 30px;
+  }
+  .most-watched-all {
+    display: flex;
+    flex-direction: row;
+    width: 100vw;
+  }
+  .move-to-love-content {
+    padding: 0 20px;
+  }
+  .more-to-love-content-card {
+    display: flex;
+    flex-direction: row;
+  }
+  .more-to-love-content-card img {
+    width: 200px;
+  }
+  .more-to-love-text {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+  }
+  .no-direct-flight-content-card {
+    box-sizing: border-box;
+    width: 300px;
+  }
+  .main-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .today,
+.today-image,
+.recent-uploads,
+.no-direct-flight-content,
+.around-the-world-content,
+.subscribe-to-newsletter,
+.most-watched-all,
+.share-the-love,
+.community-div,
+.more-to-love-content {
+    width: 1000px;
+  }
+  .no-direct-flight-content,
+.around-the-world-content {
+    border-bottom: 1px solid #c9a16e;
+  }
 }/*# sourceMappingURL=styles.css.map */
