--- a/nowness/styles.css
+++ b/nowness/styles.css
@@ -23,6 +23,7 @@ ul {
   background-color: white;
   position: fixed;
   width: 100vw;
+  padding-top: 10px;
 }
 
 .overlay-menu {
@@ -87,14 +88,15 @@ nav ul ul {
   display: flex;
   position: relative;
 }
-.row1-header .header-logo {
+.row1-header div svg {
+  padding: 2px 5px 2px 5px;
+}
+
+.header-logo {
   height: 18px;
   position: absolute;
   top: 8px;
   left: -45px;
-}
-.row1-header div svg {
-  padding: 2px 5px 2px 5px;
 }
 
 .row1-header-right svg:hover,
@@ -712,11 +714,6 @@ div.copyright p {
     justify-content: center;
     width: 100vw;
   }
-  div.row1-header {
-    justify-content: space-around;
-    height: 50px;
-    align-items: center;
-  }
   .around-the-world-content {
     flex-direction: row;
     justify-content: center;
@@ -763,6 +760,9 @@ div.copyright p {
     flex-direction: row;
     width: 100vw;
   }
+  .most-watched-content-card {
+    padding: 10px;
+  }
   .move-to-love-content {
     padding: 0 20px;
   }
@@ -780,7 +780,6 @@ div.copyright p {
   }
   .no-direct-flight-content-card {
     box-sizing: border-box;
-    width: 300px;
   }
   .main-content {
     display: flex;
@@ -797,10 +796,30 @@ div.copyright p {
 .share-the-love,
 .community-div,
 .more-to-love-content {
-    width: 1000px;
+    max-width: 1200px;
   }
   .no-direct-flight-content,
 .around-the-world-content {
     border-bottom: 1px solid #c9a16e;
+  }
+  .row1-header {
+    box-sizing: border-box;
+    width: 1000px;
+    padding: 10px 150px;
+    height: 90px;
+    align-items: center;
+    margin: auto;
+  }
+  .Menu-container {
+    top: 0;
+  }
+  .header-logo {
+    height: 100px;
+    top: auto;
+    left: auto;
+    position: relative;
+  }
+  html {
+    display: flex;
   }
 }/*# sourceMappingURL=styles.css.map */
