header styling fixed for mobile

--- a/nowness/styles.scss
+++ b/nowness/styles.scss
@@ -8,60 +8,67 @@ $font-light: 200;
 $font-regular: 700;
 $font-bold: 900;
 
-@mixin flex-column-center {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-@mixin gold-border {
-  border-bottom: 1px solid $gold;
-}
-
-@mixin section-layout {
-  @include flex-column-center;
-  width: 100vw;
-}
-@mixin content-layout {
-  @include flex-column-center;
-  width: 100vw;
-}
-@mixin card-layout {
-  display: flex;
-  flex-direction: column;
-  width: 90vw;
-  justify-content: flex-start;
-  margin-bottom: 25px;
-}
-
-// all
+// resets
 html {
   font-size: 62.5%;
 }
 * {
   margin: 0;
   padding: 0;
-  // box-sizing: border-box;
+  box-sizing: border-box;
 }
-
 body {
   font-family: nunito, sans-serif;
   color: black;
-  margin: 0px 0px 10px 0;
   background-color: $lightgrey;
-  width: 100vw;
-}
-ul {
-  list-style: none;
 }
 
 //header
-.header {
-  background-color: white;
+.header-container {
   position: fixed;
-  width: 100vw;
-  padding-top: 10px;
+  width: 100%;
+}
+.row1-header {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+  flex-wrap: nowrap;
+  margin-right: 4.5rem;
+  .row1-header-left {
+    display: flex;
+  }
+}
+svg.header-logo {
+  width: 18rem;
+  padding: 0 6rem 0 1.5rem;
+}
+.icon {
+  padding: 0.5rem;
 }
 
+.row1-header-right svg:hover,
+.icons-container svg:hover {
+  fill: $gold;
+}
+
+.scroll-menu {
+  border-top: 1px solid $mediumgrey;
+  overflow: auto;
+  white-space: nowrap;
+}
+
+.scroll-menu ul {
+  display: flex;
+  flex-direction: row;
+
+  li {
+    display: inline-block;
+    padding: 12px 20px;
+    font-size: 1.2rem;
+  }
+}
+
+// drop-down menu - TO FIX
 .overlay-menu {
   position: absolute;
   top: 50;
@@ -112,712 +119,4 @@ ul {
 // overlay sites sub-menu
 nav ul ul {
   display: none;
-}
-
-.row1-header {
-  display: flex;
-  justify-content: space-between;
-  height: 20px;
-  padding: 10px 35px 10px 10px;
-  position: relative;
-  flex-wrap: nowrap;
-
-  .row1-header-left {
-    display: flex;
-    position: relative;
-  }
-
-  div svg {
-    padding: 2px 5px 2px 5px;
-  }
-}
-
-.header-logo {
-  height: 18px;
-  position: absolute;
-  top: 8px;
-  left: -45px;
-}
-.row1-header-right svg:hover,
-.icons-container svg:hover {
-  fill: $gold;
-}
-
-.scroll-menu {
-  border-top: 1px solid $mediumgrey;
-  overflow: auto;
-  white-space: nowrap;
-}
-
-.scroll-menu ul {
-  display: flex;
-  flex-direction: row;
-
-  li {
-    display: inline-block;
-    padding: 12px 20px;
-  }
-}
-
-//main body of content
-nav ul li:hover {
-  color: $gold;
-}
-
-h1 {
-  font-weight: $font-bold;
-  font-size: 2.3rem;
-  padding: 20px;
-}
-
-p {
-  font-weight: $font-light;
-  font-size: 1.4rem;
-}
-h2 {
-  font-weight: $font-light;
-  font-size: 1.7rem;
-  padding: 15px 0px;
-}
-h3 {
-  font-weight: $font-regular;
-  font-size: 1.8rem;
-  padding: 15px 0;
-}
-.label {
-  font-size: 1.4rem;
-  font-weight: $font-light;
-}
-
-.small {
-  font-size: 1.2rem;
-  .sign-in a {
-    color: $gold;
-  }
-}
-// nav lists font style
-div ul li {
-  font-weight: $font-light;
-  font-size: 1.2rem;
-}
-.button,
-.button1 {
-  background-color: $lightgrey;
-  font-weight: $font-light;
-  font-family: nunito;
-  border-width: 1px;
-  padding: 10px 40px;
-  font-size: 1.4rem;
-  margin: 20px;
-  box-sizing: border-box;
-  height: 41px;
-  &:hover {
-    color: $gold;
-    box-shadow: 0px -1px $gold inset;
-  }
-}
-
-.icons-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  justify-items: center;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  flex-direction: row;
-}
-
-div.switches {
-  display: flex;
-  padding: 5px;
-  span.label {
-    padding-left: 15px;
-  }
-}
-// today
-.today-image {
-  width: 100vw;
-}
-.today {
-  text-align: center;
-  @include gold-border;
-  padding-bottom: 30px;
-}
-
-// recent-uploads
-.recent-uploads {
-  display: flex;
-  flex-direction: row;
-  overflow: auto;
-  @include gold-border;
-  padding: 30px 0;
-  width: 100vw;
-}
-.recent-uploads-card {
-  @include flex-column-center;
-  text-align: center;
-  width: 200px;
-  padding-right: 20px;
-}
-
-// no-direct-flight
-.no-direct-flight {
-  @include section-layout;
-}
-.no-direct-flight-content {
-  @include content-layout;
-}
-.no-direct-flight-content-card {
-  @include card-layout;
-  img {
-    width: 90vw;
-  }
-}
-
-// around-the-world
-.around-the-world {
-  @include section-layout;
-}
-.around-the-world-content {
-  @include content-layout;
-}
-.around-the-world-content-card {
-  @include card-layout;
-  img {
-    width: 90vw;
-  }
-}
-
-// subscribe-to-newsletter
-.subscribe-to-newsletter {
-  @include flex-column-center;
-  @include gold-border;
-  .subscribe-title {
-    text-align: center;
-    width: 100vw;
-  }
-  p {
-    padding: 5px 0 5px;
-  }
-  input {
-    width: 320px;
-    padding: 10px;
-    color: $lightgrey;
-    margin: 15px;
-    border-width: 2px;
-  }
-  form {
-    @include flex-column-center;
-    box-sizing: border-box;
-    width: 100vw;
-    padding: 20px;
-  }
-}
-
-// most-watched
-.most-watched {
-  @include section-layout();
-}
-.most-watched-sub {
-  @include content-layout;
-}
-.most-watched-content {
-  width: 400px;
-}
-.most-watched-content-card {
-  @include card-layout;
-  text-align: center;
-  justify-content: center;
-  width: auto;
-  img {
-    width: auto;
-  }
-}
-.most-watched-all {
-  @include gold-border;
-}
-.h3-most-watched {
-  padding: 10px;
-}
-
-//share-the-love
-.share-the-love {
-  @include flex-column-center;
-  @include gold-border;
-}
-.share-the-love-content-card {
-  display: flex;
-  flex-direction: column;
-}
-.social-detail {
-  display: none;
-}
-
-// become-a-member
-.become-a-member {
-  @include flex-column-center;
-  text-align: center;
-  padding: 20px 20px 60px 20px;
-}
-
-// connect
-.connect {
-  text-align: center;
-  @include gold-border;
-  .h2-connect {
-    font-size: 1.3rem;
-  }
-}
-
-// more to love
-.more-to-love {
-  @include section-layout;
-  border-style: none;
-}
-
-.more-to-love-content {
-  @include content-layout;
-}
-
-.more-to-love-content-card {
-  @include card-layout;
-  width: 200px;
-  img {
-    width: 200px;
-  }
-}
-h3.light {
-  font-weight: $font-light;
-  padding: 10px 0px 5px;
-}
-
-// footer
-
-footer .social-banner .icons-container {
-  @include gold-border;
-  border-top: 1px solid $gold;
-  svg {
-    padding: 30px;
-  }
-}
-
-footer p,
-li {
-  font-size: 1.2rem;
-  padding: 10px;
-}
-
-.links-end ul {
-  @include flex-column-center;
-  margin: 20px 0 60px;
-  // li:hover {
-  //   color: $gold;
-  // }
-}
-div.copyright {
-  @include flex-column-center;
-  p {
-    justify-items: center;
-    text-align: center;
-  }
-}
-
-// toggle //
-.slider {
-  z-index: -1;
-}
-.switch {
-  --button-width: 3.5em;
-  --button-height: 2em;
-  --toggle-diameter: 1.5em;
-  --button-toggle-offset: calc(
-    (var(--button-height) - var(--toggle-diameter)) / 2
-  );
-  --toggle-shadow-offset: 10px;
-  --toggle-wider: 3em;
-  --color-grey: #aeaeae;
-  --color-green: #c9a16e;
-}
-
-.slider {
-  display: inline-block;
-  width: var(--button-width);
-  height: var(--button-height);
-  background-color: var(--color-grey);
-  border-radius: calc(var(--button-height) / 2);
-  position: relative;
-  transition: 0.3s all ease-in-out;
-}
-
-.slider::after {
-  content: "";
-  display: inline-block;
-  width: var(--toggle-diameter);
-  height: var(--toggle-diameter);
-  background-color: #fff;
-  border-radius: calc(var(--toggle-diameter) / 2);
-  position: absolute;
-  top: var(--button-toggle-offset);
-  transform: translateX(var(--button-toggle-offset));
-  box-shadow: var(--toggle-shadow-offset) 0
-    calc(var(--toggle-shadow-offset) * 4) rgba(0, 0, 0, 0.1);
-  transition: 0.3s all ease-in-out;
-}
-
-.switch input[type="checkbox"]:checked + .slider {
-  background-color: var(--color-green);
-}
-
-.switch input[type="checkbox"]:checked + .slider::after {
-  transform: translateX(
-    calc(
-      var(--button-width) - var(--toggle-diameter) - var(--button-toggle-offset)
-    )
-  );
-  box-shadow: calc(var(--toggle-shadow-offset) * -1) 0
-    calc(var(--toggle-shadow-offset) * 4) rgba(0, 0, 0, 0.1);
-}
-
-.switch input[type="checkbox"] {
-  display: none;
-}
-
-.switch input[type="checkbox"]:active + .slider::after {
-  width: var(--toggle-wider);
-}
-
-.switch input[type="checkbox"]:checked:active + .slider::after {
-  transform: translateX(
-    calc(
-      var(--button-width) - var(--toggle-wider) - var(--button-toggle-offset)
-    )
-  );
-}
-// toggle end//
-
-// hamburger
-.Menu-container {
-  height: 25px;
-  width: 30px;
-  cursor: pointer;
-  margin: 10% auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  top: -8px;
-  left: 0px;
-}
-
-.line {
-  position: absolute;
-  height: 2px;
-  width: 25px;
-  background-color: black;
-  transition: 0.4s ease;
-}
-
-#hamburger-input {
-  display: none;
-}
-
-.line::before {
-  content: "";
-  position: absolute;
-  height: 2px;
-  width: 25px;
-  background-color: black;
-  top: -8px;
-  transition: 0.4s ease;
-}
-
-.line::after {
-  content: "";
-  position: absolute;
-  height: 2px;
-  width: 25px;
-  background-color: black;
-  top: 8px;
-}
-
-#hamburger-input:checked + label #active {
-  transform: rotate(45deg);
-  background-color: $gold;
-}
-
-#hamburger-input:checked + label #active::before {
-  transform: rotate(-90deg) translateX(-8px);
-  background-color: $gold;
-}
-
-#hamburger-input:checked + label #active::after {
-  display: none;
-}
-.black-time-box {
-  background-color: black;
-  width: 50px;
-  height: 25px;
-  color: white;
-  font-size: 1.2rem;
-  padding: 2px 0 1px 5px;
-  position: relative;
-}
-.time {
-  position: absolute;
-  margin: 0;
-}
-@media screen and (min-width: 750px) {
-  .overlay-menu {
-    width: 250px;
-    height: 100vh;
-  }
-  #hamburger-input:checked ~ .overlay-menu {
-    transform: translateY(4.5%);
-  }
-  .today {
-    padding-top: 80px;
-  }
-
-  // no-direct-flight
-  .no-direct-flight {
-    width: 100vw;
-  }
-  .no-direct-flight-content {
-    flex-direction: row;
-    justify-content: space-around;
-    padding: 20px;
-  }
-  .no-direct-flight-content-card {
-    padding: 0 10px;
-    width: 200px;
-    flex: auto;
-
-    img {
-      width: auto;
-    }
-  }
-
-  // more-to-love
-  .more-to-love {
-    width: 100vw;
-  }
-  .more-to-love-content {
-    flex-direction: row;
-    justify-content: space-around;
-    padding: 20px;
-  }
-  .more-to-love-content-card {
-    padding: 0 10px;
-    width: 200px;
-    flex: auto;
-
-    img {
-      width: auto;
-    }
-  }
-
-  // around-the-world
-  .around-the-world {
-    width: 100vw;
-  }
-  .around-the-world-content {
-    flex-direction: row;
-    justify-content: space-around;
-  }
-  .around-the-world-content-left,
-  .around-the-world-content-right {
-    flex-direction: row;
-    justify-content: space-around;
-  }
-  .around-the-world-content-card {
-    flex: auto;
-    width: 400px;
-    img {
-      width: auto;
-    }
-  }
-  //share-the-love
-  .share-the-love {
-    @include flex-column-center;
-  }
-
-  .share-the-love-content {
-    display: flex;
-    flex-direction: row;
-    img {
-      width: 250px;
-    }
-  }
-  .share-the-love-content-card {
-    display: flex;
-    flex-direction: row;
-    padding: 20px;
-    .button1 {
-      display: none;
-    }
-  }
-  .share-the-love-right {
-    @include flex-column-center;
-  }
-  .social-detail {
-    display: contents;
-    @include flex-column-center;
-    padding: 20px;
-    width: 250px;
-    height: 250px;
-    justify-content: space-evenly;
-    p {
-      font-size: 1.6rem;
-    }
-  }
-  h2 {
-    font-size: 2.6rem;
-  }
-  p {
-    font-size: 1.5rem;
-  }
-  .connect .icons-container {
-    justify-content: center;
-    align-content: center;
-    svg {
-      width: 30px;
-      margin: 15px;
-    }
-  }
-  .connect .h2-connect {
-    font-size: 1.7rem;
-  }
-  .scroll-menu ul {
-    justify-content: center;
-  }
-  .p-join {
-    width: 500px;
-    font-size: 1.7rem;
-  }
-}
-
-@media screen and (min-width: 1000px) {
-  div.copyright {
-    flex-direction: row;
-    justify-content: space-around;
-    width: 100vw;
-    margin: 30px 20px;
-  }
-  nav.links-end ul {
-    flex-direction: row;
-    margin: 20px 20px;
-    justify-content: center;
-    width: 100vw;
-  }
-
-  .around-the-world-content {
-    flex-direction: row;
-    justify-content: center;
-  }
-
-  .around-the-world-content-left {
-    display: flex;
-    flex-direction: row;
-  }
-  .around-the-world-content-right {
-    display: flex;
-    flex-direction: row;
-  }
-  .around-the-world-content-card {
-    padding: 0 10px;
-    box-sizing: border-box;
-    width: 300px;
-  }
-  .community {
-    display: flex;
-    @include gold-border;
-    justify-content: center;
-    align-content: center;
-    height: 400px;
-  }
-  .community-div {
-    padding: 50px;
-  }
-  .connect {
-    display: block;
-    border: none;
-    height: 250px;
-    justify-content: center;
-  }
-  .become-a-member {
-    display: block;
-    padding: 0;
-    height: 250px;
-    justify-content: center;
-    border-right: 1px solid black;
-    padding: 30px;
-  }
-  .most-watched-all {
-    display: flex;
-    flex-direction: row;
-    width: 100vw;
-  }
-  .most-watched-content-card {
-    padding: 10px;
-  }
-  .move-to-love-content {
-    padding: 0 20px;
-  }
-  .more-to-love-content-card {
-    display: flex;
-    flex-direction: row;
-    img {
-      width: 200px;
-    }
-  }
-  .more-to-love-text {
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-  }
-
-  .no-direct-flight-content-card {
-    box-sizing: border-box;
-  }
-  .main-content {
-    @include flex-column-center;
-  }
-  .today,
-  .today-image,
-  .recent-uploads,
-  .no-direct-flight-content,
-  .around-the-world-content,
-  .subscribe-to-newsletter,
-  .most-watched-all,
-  .share-the-love,
-  .community-div,
-  .more-to-love-content {
-    max-width: 1200px;
-  }
-  .no-direct-flight-content,
-  .around-the-world-content {
-    @include gold-border;
-  }
-
-  .row1-header {
-    box-sizing: border-box;
-    width: 1000px;
-    padding: 10px 150px;
-    height: 90px;
-    align-items: center;
-    margin: auto;
-  }
-  .Menu-container {
-    top: 0;
-  }
-  .header-logo {
-    height: 100px;
-    top: auto;
-    left: auto;
-    position: relative;
-  }
-
-  html {
-    display: flex;
-  }
 }
