--- a/nowness/styles.css
+++ b/nowness/styles.css
@@ -5,25 +5,59 @@ html {
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
   font-family: nunito, sans-serif;
   color: black;
-  margin: 0px 0px 10px 0;
   background-color: #ffffff;
-  width: 100vw;
 }
 
-ul {
-  list-style: none;
-}
-
-.header {
-  background-color: white;
+.header-container {
   position: fixed;
-  width: 100vw;
-  padding-top: 10px;
+  width: 100%;
+}
+
+.row1-header {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+  flex-wrap: nowrap;
+  margin-right: 4.5rem;
+}
+.row1-header .row1-header-left {
+  display: flex;
+}
+
+svg.header-logo {
+  width: 18rem;
+  padding: 0 6rem 0 1.5rem;
+}
+
+.icon {
+  padding: 0.5rem;
+}
+
+.row1-header-right svg:hover,
+.icons-container svg:hover {
+  fill: #c9a16e;
+}
+
+.scroll-menu {
+  border-top: 1px solid #dcdcdc;
+  overflow: auto;
+  white-space: nowrap;
+}
+
+.scroll-menu ul {
+  display: flex;
+  flex-direction: row;
+}
+.scroll-menu ul li {
+  display: inline-block;
+  padding: 12px 20px;
+  font-size: 1.2rem;
 }
 
 .overlay-menu {
@@ -74,752 +108,4 @@ ul {
 
 nav ul ul {
   display: none;
-}
-
-.row1-header {
-  display: flex;
-  justify-content: space-between;
-  height: 20px;
-  padding: 10px 35px 10px 10px;
-  position: relative;
-  flex-wrap: nowrap;
-}
-.row1-header .row1-header-left {
-  display: flex;
-  position: relative;
-}
-.row1-header div svg {
-  padding: 2px 5px 2px 5px;
-}
-
-.header-logo {
-  height: 18px;
-  position: absolute;
-  top: 8px;
-  left: -45px;
-}
-
-.row1-header-right svg:hover,
-.icons-container svg:hover {
-  fill: #c9a16e;
-}
-
-.scroll-menu {
-  border-top: 1px solid #dcdcdc;
-  overflow: auto;
-  white-space: nowrap;
-}
-
-.scroll-menu ul {
-  display: flex;
-  flex-direction: row;
-}
-.scroll-menu ul li {
-  display: inline-block;
-  padding: 12px 20px;
-}
-
-nav ul li:hover {
-  color: #c9a16e;
-}
-
-h1 {
-  font-weight: 900;
-  font-size: 2.3rem;
-  padding: 20px;
-}
-
-p {
-  font-weight: 200;
-  font-size: 1.4rem;
-}
-
-h2 {
-  font-weight: 200;
-  font-size: 1.7rem;
-  padding: 15px 0px;
-}
-
-h3 {
-  font-weight: 700;
-  font-size: 1.8rem;
-  padding: 15px 0;
-}
-
-.label {
-  font-size: 1.4rem;
-  font-weight: 200;
-}
-
-.small {
-  font-size: 1.2rem;
-}
-.small .sign-in a {
-  color: #c9a16e;
-}
-
-div ul li {
-  font-weight: 200;
-  font-size: 1.2rem;
-}
-
-.button,
-.button1 {
-  background-color: #ffffff;
-  font-weight: 200;
-  font-family: nunito;
-  border-width: 1px;
-  padding: 10px 40px;
-  font-size: 1.4rem;
-  margin: 20px;
-  box-sizing: border-box;
-  height: 41px;
-}
-.button:hover,
-.button1:hover {
-  color: #c9a16e;
-  box-shadow: 0px -1px #c9a16e inset;
-}
-
-.icons-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  justify-items: center;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  flex-direction: row;
-}
-
-div.switches {
-  display: flex;
-  padding: 5px;
-}
-div.switches span.label {
-  padding-left: 15px;
-}
-
-.today-image {
-  width: 100vw;
-}
-
-.today {
-  text-align: center;
-  border-bottom: 1px solid #c9a16e;
-  padding-bottom: 30px;
-}
-
-.recent-uploads {
-  display: flex;
-  flex-direction: row;
-  overflow: auto;
-  border-bottom: 1px solid #c9a16e;
-  padding: 30px 0;
-  width: 100vw;
-}
-
-.recent-uploads-card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  width: 200px;
-  padding-right: 20px;
-}
-
-.no-direct-flight {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100vw;
-}
-
-.no-direct-flight-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100vw;
-}
-
-.no-direct-flight-content-card {
-  display: flex;
-  flex-direction: column;
-  width: 90vw;
-  justify-content: flex-start;
-  margin-bottom: 25px;
-}
-.no-direct-flight-content-card img {
-  width: 90vw;
-}
-
-.around-the-world {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100vw;
-}
-
-.around-the-world-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100vw;
-}
-
-.around-the-world-content-card {
-  display: flex;
-  flex-direction: column;
-  width: 90vw;
-  justify-content: flex-start;
-  margin-bottom: 25px;
-}
-.around-the-world-content-card img {
-  width: 90vw;
-}
-
-.subscribe-to-newsletter {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border-bottom: 1px solid #c9a16e;
-}
-.subscribe-to-newsletter .subscribe-title {
-  text-align: center;
-  width: 100vw;
-}
-.subscribe-to-newsletter p {
-  padding: 5px 0 5px;
-}
-.subscribe-to-newsletter input {
-  width: 320px;
-  padding: 10px;
-  color: #ffffff;
-  margin: 15px;
-  border-width: 2px;
-}
-.subscribe-to-newsletter form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  box-sizing: border-box;
-  width: 100vw;
-  padding: 20px;
-}
-
-.most-watched {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100vw;
-}
-
-.most-watched-sub {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100vw;
-}
-
-.most-watched-content {
-  width: 400px;
-}
-
-.most-watched-content-card {
-  display: flex;
-  flex-direction: column;
-  width: 90vw;
-  justify-content: flex-start;
-  margin-bottom: 25px;
-  text-align: center;
-  justify-content: center;
-  width: auto;
-}
-.most-watched-content-card img {
-  width: auto;
-}
-
-.most-watched-all {
-  border-bottom: 1px solid #c9a16e;
-}
-
-.h3-most-watched {
-  padding: 10px;
-}
-
-.share-the-love {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border-bottom: 1px solid #c9a16e;
-}
-
-.share-the-love-content-card {
-  display: flex;
-  flex-direction: column;
-}
-
-.social-detail {
-  display: none;
-}
-
-.become-a-member {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  padding: 20px 20px 60px 20px;
-}
-
-.connect {
-  text-align: center;
-  border-bottom: 1px solid #c9a16e;
-}
-.connect .h2-connect {
-  font-size: 1.3rem;
-}
-
-.more-to-love {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100vw;
-  border-style: none;
-}
-
-.more-to-love-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100vw;
-}
-
-.more-to-love-content-card {
-  display: flex;
-  flex-direction: column;
-  width: 90vw;
-  justify-content: flex-start;
-  margin-bottom: 25px;
-  width: 200px;
-}
-.more-to-love-content-card img {
-  width: 200px;
-}
-
-h3.light {
-  font-weight: 200;
-  padding: 10px 0px 5px;
-}
-
-footer .social-banner .icons-container {
-  border-bottom: 1px solid #c9a16e;
-  border-top: 1px solid #c9a16e;
-}
-footer .social-banner .icons-container svg {
-  padding: 30px;
-}
-
-footer p,
-li {
-  font-size: 1.2rem;
-  padding: 10px;
-}
-
-.links-end ul {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 20px 0 60px;
-}
-
-div.copyright {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-div.copyright p {
-  justify-items: center;
-  text-align: center;
-}
-
-.slider {
-  z-index: -1;
-}
-
-.switch {
-  --button-width: 3.5em;
-  --button-height: 2em;
-  --toggle-diameter: 1.5em;
-  --button-toggle-offset: calc(
-    (var(--button-height) - var(--toggle-diameter)) / 2
-  );
-  --toggle-shadow-offset: 10px;
-  --toggle-wider: 3em;
-  --color-grey: #aeaeae;
-  --color-green: #c9a16e;
-}
-
-.slider {
-  display: inline-block;
-  width: var(--button-width);
-  height: var(--button-height);
-  background-color: var(--color-grey);
-  border-radius: calc(var(--button-height) / 2);
-  position: relative;
-  transition: 0.3s all ease-in-out;
-}
-
-.slider::after {
-  content: "";
-  display: inline-block;
-  width: var(--toggle-diameter);
-  height: var(--toggle-diameter);
-  background-color: #fff;
-  border-radius: calc(var(--toggle-diameter) / 2);
-  position: absolute;
-  top: var(--button-toggle-offset);
-  transform: translateX(var(--button-toggle-offset));
-  box-shadow: var(--toggle-shadow-offset) 0 calc(var(--toggle-shadow-offset) * 4) rgba(0, 0, 0, 0.1);
-  transition: 0.3s all ease-in-out;
-}
-
-.switch input[type=checkbox]:checked + .slider {
-  background-color: var(--color-green);
-}
-
-.switch input[type=checkbox]:checked + .slider::after {
-  transform: translateX(calc(var(--button-width) - var(--toggle-diameter) - var(--button-toggle-offset)));
-  box-shadow: calc(var(--toggle-shadow-offset) * -1) 0 calc(var(--toggle-shadow-offset) * 4) rgba(0, 0, 0, 0.1);
-}
-
-.switch input[type=checkbox] {
-  display: none;
-}
-
-.switch input[type=checkbox]:active + .slider::after {
-  width: var(--toggle-wider);
-}
-
-.switch input[type=checkbox]:checked:active + .slider::after {
-  transform: translateX(calc(var(--button-width) - var(--toggle-wider) - var(--button-toggle-offset)));
-}
-
-.Menu-container {
-  height: 25px;
-  width: 30px;
-  cursor: pointer;
-  margin: 10% auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  top: -8px;
-  left: 0px;
-}
-
-.line {
-  position: absolute;
-  height: 2px;
-  width: 25px;
-  background-color: black;
-  transition: 0.4s ease;
-}
-
-#hamburger-input {
-  display: none;
-}
-
-.line::before {
-  content: "";
-  position: absolute;
-  height: 2px;
-  width: 25px;
-  background-color: black;
-  top: -8px;
-  transition: 0.4s ease;
-}
-
-.line::after {
-  content: "";
-  position: absolute;
-  height: 2px;
-  width: 25px;
-  background-color: black;
-  top: 8px;
-}
-
-#hamburger-input:checked + label #active {
-  transform: rotate(45deg);
-  background-color: #c9a16e;
-}
-
-#hamburger-input:checked + label #active::before {
-  transform: rotate(-90deg) translateX(-8px);
-  background-color: #c9a16e;
-}
-
-#hamburger-input:checked + label #active::after {
-  display: none;
-}
-
-.black-time-box {
-  background-color: black;
-  width: 50px;
-  height: 25px;
-  color: white;
-  font-size: 1.2rem;
-  padding: 2px 0 1px 5px;
-  position: relative;
-}
-
-.time {
-  position: absolute;
-  margin: 0;
-}
-
-@media screen and (min-width: 750px) {
-  .overlay-menu {
-    width: 250px;
-    height: 100vh;
-  }
-  #hamburger-input:checked ~ .overlay-menu {
-    transform: translateY(4.5%);
-  }
-  .today {
-    padding-top: 80px;
-  }
-  .no-direct-flight {
-    width: 100vw;
-  }
-  .no-direct-flight-content {
-    flex-direction: row;
-    justify-content: space-around;
-    padding: 20px;
-  }
-  .no-direct-flight-content-card {
-    padding: 0 10px;
-    width: 200px;
-    flex: auto;
-  }
-  .no-direct-flight-content-card img {
-    width: auto;
-  }
-  .more-to-love {
-    width: 100vw;
-  }
-  .more-to-love-content {
-    flex-direction: row;
-    justify-content: space-around;
-    padding: 20px;
-  }
-  .more-to-love-content-card {
-    padding: 0 10px;
-    width: 200px;
-    flex: auto;
-  }
-  .more-to-love-content-card img {
-    width: auto;
-  }
-  .around-the-world {
-    width: 100vw;
-  }
-  .around-the-world-content {
-    flex-direction: row;
-    justify-content: space-around;
-  }
-  .around-the-world-content-left,
-.around-the-world-content-right {
-    flex-direction: row;
-    justify-content: space-around;
-  }
-  .around-the-world-content-card {
-    flex: auto;
-    width: 400px;
-  }
-  .around-the-world-content-card img {
-    width: auto;
-  }
-  .share-the-love {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .share-the-love-content {
-    display: flex;
-    flex-direction: row;
-  }
-  .share-the-love-content img {
-    width: 250px;
-  }
-  .share-the-love-content-card {
-    display: flex;
-    flex-direction: row;
-    padding: 20px;
-  }
-  .share-the-love-content-card .button1 {
-    display: none;
-  }
-  .share-the-love-right {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .social-detail {
-    display: contents;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    width: 250px;
-    height: 250px;
-    justify-content: space-evenly;
-  }
-  .social-detail p {
-    font-size: 1.6rem;
-  }
-  h2 {
-    font-size: 2.6rem;
-  }
-  p {
-    font-size: 1.5rem;
-  }
-  .connect .icons-container {
-    justify-content: center;
-    align-content: center;
-  }
-  .connect .icons-container svg {
-    width: 30px;
-    margin: 15px;
-  }
-  .connect .h2-connect {
-    font-size: 1.7rem;
-  }
-  .scroll-menu ul {
-    justify-content: center;
-  }
-  .p-join {
-    width: 500px;
-    font-size: 1.7rem;
-  }
-}
-@media screen and (min-width: 1000px) {
-  div.copyright {
-    flex-direction: row;
-    justify-content: space-around;
-    width: 100vw;
-    margin: 30px 20px;
-  }
-  nav.links-end ul {
-    flex-direction: row;
-    margin: 20px 20px;
-    justify-content: center;
-    width: 100vw;
-  }
-  .around-the-world-content {
-    flex-direction: row;
-    justify-content: center;
-  }
-  .around-the-world-content-left {
-    display: flex;
-    flex-direction: row;
-  }
-  .around-the-world-content-right {
-    display: flex;
-    flex-direction: row;
-  }
-  .around-the-world-content-card {
-    padding: 0 10px;
-    box-sizing: border-box;
-    width: 300px;
-  }
-  .community {
-    display: flex;
-    border-bottom: 1px solid #c9a16e;
-    justify-content: center;
-    align-content: center;
-    height: 400px;
-  }
-  .community-div {
-    padding: 50px;
-  }
-  .connect {
-    display: block;
-    border: none;
-    height: 250px;
-    justify-content: center;
-  }
-  .become-a-member {
-    display: block;
-    padding: 0;
-    height: 250px;
-    justify-content: center;
-    border-right: 1px solid black;
-    padding: 30px;
-  }
-  .most-watched-all {
-    display: flex;
-    flex-direction: row;
-    width: 100vw;
-  }
-  .most-watched-content-card {
-    padding: 10px;
-  }
-  .move-to-love-content {
-    padding: 0 20px;
-  }
-  .more-to-love-content-card {
-    display: flex;
-    flex-direction: row;
-  }
-  .more-to-love-content-card img {
-    width: 200px;
-  }
-  .more-to-love-text {
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-  }
-  .no-direct-flight-content-card {
-    box-sizing: border-box;
-  }
-  .main-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .today,
-.today-image,
-.recent-uploads,
-.no-direct-flight-content,
-.around-the-world-content,
-.subscribe-to-newsletter,
-.most-watched-all,
-.share-the-love,
-.community-div,
-.more-to-love-content {
-    max-width: 1200px;
-  }
-  .no-direct-flight-content,
-.around-the-world-content {
-    border-bottom: 1px solid #c9a16e;
-  }
-  .row1-header {
-    box-sizing: border-box;
-    width: 1000px;
-    padding: 10px 150px;
-    height: 90px;
-    align-items: center;
-    margin: auto;
-  }
-  .Menu-container {
-    top: 0;
-  }
-  .header-logo {
-    height: 100px;
-    top: auto;
-    left: auto;
-    position: relative;
-  }
-  html {
-    display: flex;
-  }
 }/*# sourceMappingURL=styles.css.map */
