--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,6 @@ svg.header-logo {
 
 .scroll-menu ul {
   display: flex;
-  flex-direction: row;
 }
 .scroll-menu ul li {
   display: inline-block;
@@ -108,4 +107,68 @@ svg.header-logo {
 
 nav ul ul {
   display: none;
+}
+
+.container {
+  padding-bottom: 3rem;
+}
+
+.today {
+  text-align: center;
+  border-bottom: 1px solid #c9a16e;
+  width: 100%;
+  padding-top: 10.8rem;
+}
+
+.headline-image img {
+  position: relative;
+  width: 100%;
+  height: 22rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.today-text {
+  padding-top: 4rem;
+}
+.today-text h2 {
+  font-size: 2.4rem;
+}
+.today-text p {
+  font-size: 1.4rem;
+  font-weight: lighter;
+}
+
+.headline-container {
+  position: relative;
+}
+
+.play-circle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.recent-uploads-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding-right: 20px;
+}
+.recent-uploads-card p {
+  font-size: 1.3rem;
+  font-weight: lighter;
+  padding: 0.6rem;
+}
+.recent-uploads-card p:nth-child(3) {
+  font-size: 1.5rem;
+}
+
+.card-container {
+  display: flex;
+  overflow: auto;
+  border-bottom: 1px solid #c9a16e;
+  padding: 3rem 0 3rem 12rem;
 }/*# sourceMappingURL=styles.css.map */
