--- a/styles.scss
+++ b/styles.scss
@@ -22,6 +22,28 @@ body {
   color: black;
   background-color: $lightgrey;
 }
+// mixins
+@mixin gold-border {
+  border-bottom: 1px solid $gold;
+}
+@mixin section-layout {
+  @include flex-column-center;
+}
+@mixin content-layout {
+  @include flex-column-center;
+}
+@mixin card-layout {
+  display: flex;
+  flex-direction: column;
+  width: 90vw;
+  justify-content: flex-start;
+  margin-bottom: 25px;
+}
+@mixin flex-column-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 //header
 .header-container {
@@ -59,7 +81,6 @@ svg.header-logo {
 
 .scroll-menu ul {
   display: flex;
-  flex-direction: row;
 
   li {
     display: inline-block;
@@ -119,4 +140,68 @@ svg.header-logo {
 // overlay sites sub-menu
 nav ul ul {
   display: none;
+}
+
+// container
+.container {
+  padding-bottom: 3rem;
+}
+
+// today
+
+.today {
+  text-align: center;
+  @include gold-border;
+  width: 100%;
+  padding-top: 10.8rem;
+}
+.headline-image {
+  img {
+    position: relative;
+    width: 100%;
+    height: 22rem;
+    object-fit: cover;
+  }
+}
+.today-text {
+  padding-top: 4rem;
+  h2 {
+    font-size: 2.4rem;
+  }
+  p {
+    font-size: 1.4rem;
+    font-weight: lighter;
+  }
+}
+.headline-container {
+  position: relative;
+}
+
+// play button overlay
+.play-circle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.recent-uploads-card {
+  @include flex-column-center;
+  text-align: center;
+  padding-right: 20px;
+  p {
+    font-size: 1.3rem;
+    font-weight: lighter;
+    padding: 0.6rem;
+  }
+  p:nth-child(3) {
+    font-size: 1.5rem;
+  }
+}
+
+.card-container {
+  display: flex;
+  overflow: auto;
+  @include gold-border;
+  padding: 3rem 0 3rem 12rem;
 }
