--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,28 @@ body {
   background-color: #ffffff;
 }
 
+h3 {
+  text-align: center;
+  font-weight: lighter;
+  font-size: 1.8rem;
+  padding-bottom: 2.5rem;
+}
+
+h4 {
+  font-size: 2rem;
+  margin: 1.5rem 0;
+}
+
+.description-1 {
+  font-size: 1.7rem;
+  font-weight: lighter;
+}
+
 .header-container {
   position: fixed;
   width: 100%;
+  z-index: 999;
+  background-color: #ffffff;
 }
 
 .row1-header {
@@ -110,14 +129,14 @@ nav ul ul {
 }
 
 .container {
-  padding-bottom: 3rem;
+  padding: 0 2rem 2.5rem 2rem;
 }
 
 .today {
   text-align: center;
   border-bottom: 1px solid #c9a16e;
   width: 100%;
-  padding-top: 10.8rem;
+  padding: 10.8rem 0 2.5rem 0;
 }
 
 .headline-image img {
@@ -150,6 +169,11 @@ nav ul ul {
   transform: translate(-50%, -50%);
 }
 
+.recent-uploads {
+  padding-left: 0;
+  padding-right: 0;
+}
+
 .recent-uploads-card {
   display: flex;
   flex-direction: column;
@@ -171,4 +195,23 @@ nav ul ul {
   overflow: auto;
   border-bottom: 1px solid #c9a16e;
   padding: 3rem 0 3rem 12rem;
+}
+
+.no-direct-flight-content-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.no-direct-flight-content-card {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: flex-start;
+  margin-bottom: 25px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.no-direct-flight-content-card img {
+  width: 100%;
 }/*# sourceMappingURL=styles.css.map */
