--- a/styles.scss
+++ b/styles.scss
@@ -239,25 +239,125 @@ nav ul ul {
 // subscribe-to-newsletter
 .subscribe-to-newsletter {
   @include flex-column-center;
-  @include gold-border;
   .subscribe-title {
     text-align: center;
-    width: 100vw;
+    width: 100%;
   }
   p {
-    padding: 5px 0 5px;
+    padding: 0;
   }
   input {
-    width: 320px;
+    width: 100%;
     padding: 10px;
-    color: $lightgrey;
+    color: black;
     margin: 15px;
     border-width: 2px;
   }
   form {
     @include flex-column-center;
-    box-sizing: border-box;
-    width: 100vw;
-    padding: 20px;
+    margin: 0 5rem;
+  }
+  h3 {
+    padding-bottom: 0.8rem;
+  }
+}
+.switches {
+  display: flex;
+  padding: 0.9rem 0;
+  .description-1 {
+    padding: 0;
+    padding-left: 2rem;
+  }
+}
+
+// toggle //
+.slider {
+  z-index: -1;
+}
+.switch {
+  --button-width: 3.5em;
+  --button-height: 2em;
+  --toggle-diameter: 1.5em;
+  --button-toggle-offset: calc(
+    (var(--button-height) - var(--toggle-diameter)) / 2
+  );
+  --toggle-shadow-offset: 10px;
+  --toggle-wider: 3em;
+  --color-grey: #aeaeae;
+  --color-green: #c9a16e;
+}
+
+.slider {
+  display: inline-block;
+  width: var(--button-width);
+  height: var(--button-height);
+  background-color: var(--color-grey);
+  border-radius: calc(var(--button-height) / 2);
+  position: relative;
+  transition: 0.3s all ease-in-out;
+}
+
+.slider::after {
+  content: "";
+  display: inline-block;
+  width: var(--toggle-diameter);
+  height: var(--toggle-diameter);
+  background-color: #fff;
+  border-radius: calc(var(--toggle-diameter) / 2);
+  position: absolute;
+  top: var(--button-toggle-offset);
+  transform: translateX(var(--button-toggle-offset));
+  box-shadow: var(--toggle-shadow-offset) 0
+    calc(var(--toggle-shadow-offset) * 4) rgba(0, 0, 0, 0.1);
+  transition: 0.3s all ease-in-out;
+}
+
+.switch input[type="checkbox"]:checked + .slider {
+  background-color: var(--color-green);
+}
+
+.switch input[type="checkbox"]:checked + .slider::after {
+  transform: translateX(
+    calc(
+      var(--button-width) - var(--toggle-diameter) - var(--button-toggle-offset)
+    )
+  );
+  box-shadow: calc(var(--toggle-shadow-offset) * -1) 0
+    calc(var(--toggle-shadow-offset) * 4) rgba(0, 0, 0, 0.1);
+}
+
+.switch input[type="checkbox"] {
+  display: none;
+}
+
+.switch input[type="checkbox"]:active + .slider::after {
+  width: var(--toggle-wider);
+}
+
+.switch input[type="checkbox"]:checked:active + .slider::after {
+  transform: translateX(
+    calc(
+      var(--button-width) - var(--toggle-wider) - var(--button-toggle-offset)
+    )
+  );
+}
+// toggle end//
+
+// button
+
+.button,
+.button1 {
+  background-color: $lightgrey;
+  font-weight: $font-light;
+  font-family: nunito;
+  border-width: 1px;
+  padding: 10px 40px;
+  font-size: 1.4rem;
+  margin: 20px;
+  box-sizing: border-box;
+  height: 41px;
+  &:hover {
+    color: $gold;
+    box-shadow: 0px -1px $gold inset;
   }
 }
