--- a/styles.scss
+++ b/styles.scss
@@ -361,3 +361,24 @@ nav ul ul {
     box-shadow: 0px -1px $gold inset;
   }
 }
+// most-watched
+.most-watched {
+  padding-top: 0;
+  display: flex;
+  flex-direction: column;
+  h3 {
+    padding-bottom: 2rem;
+  }
+}
+
+.most-watched-content-card {
+  @include card-layout;
+  text-align: center;
+  align-items: center;
+  margin-top: 2.5rem;
+  margin-bottom: 0;
+  // justify-content: center;
+  img {
+    max-width: 100%;
+  }
+}
